--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Physics Game</title>
   </head>
   <body>
+    <div id="root"></div>
     <script src="./dist/index.js"></script>
   </body>
 </html>
